--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIFA TEST CASE</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
 
     </header>
     <main>
+        <div class="box-sizeing">
+            <div class="content-box">
+
+            </div>
+            <!-- <div class="boder-box"> -->
+
+            </div>
+        </div>
 
     </main>
     
 </body>
 <footer>
-    
+
 </footer>
 </html>
