--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <section class="banner">
+      <section class="banner container">
         <div class="banner-left">
           <h2>The Greatest show on the earth</h2>
           <p>
@@ -16,7 +16,7 @@
             It has roots in a piece of classical Latin literature from 45 BC,
             making it over 2000 years old.
           </p>
-          <button>Watch Live</button>
+          <button class="btn">Watch Live</button>
         </div>
         <div class="banner-right">
           <img src="img/banner/banner-img.png" alt="" />
